@@ -1,3 +1,7 @@
+2014-12-31  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/cnpyMod.cpp: Correct call to byte swap for big endian systems
+
 2014-12-28  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: Edited Title: and Description:; bumped Date: and Version:
